--- a/css/index.css
+++ b/css/index.css
@@ -21,7 +21,8 @@ body{
 #myVideo {
     position: fixed;
     right: 0;
-    bottom: 0;
+    /* top: 0; */
+    bottom: 1;
     min-width: 100%; 
     min-height: 100%;
 
@@ -67,7 +68,7 @@ body{
 
 .wrap-check-55{
     color: black;
-    margin-right: 5px;
+    /* margin-right: 5px; */
 }
 
 .wrap-check-55 .checkbox {
@@ -140,8 +141,8 @@ transparent;
   .wrap-check-55 .checkbox svg,
   .wrap-check-55 .checkbox input {
     display: block;
-    height: 100%;
-    width: 100%;
+    height: 15px;
+    width: 15px;
   }
 .input-box i{
     position: absolute;
@@ -155,6 +156,7 @@ transparent;
     display: flex;
     justify-content: space-between;
     font-size: 16px;
+    /* align-items: center; */
     margin:-15px 0px 15px;
 }
 
@@ -165,9 +167,15 @@ transparent;
         
     }
 
+    .wrap-check-55{
+      align-self: center;
+      margin-top: 4px;
+     
+    }
+
 .remember label input{
     color: white;
-    margin-right: 3px;
+    /* margin-right: 3px; */
 }
 
 .remember a{
@@ -401,3 +409,137 @@ nav{
   } */
 }
 
+
+
+
+
+.tooltip-container{
+  z-index: 10;
+  position: absolute;
+  bottom: 9%;
+  right: 10%;
+}
+
+
+
+
+ul {
+  list-style: none;
+}
+
+.example-2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  position: absolute;
+  right: 1%;
+  background: transparent;
+  border: 2px solid rgba(255, 255, 255, .2);
+  padding: 30px 0px;
+  border-radius: 10px;
+  backdrop-filter: blur(50px);
+  z-index: 10;
+}
+
+
+
+.example-2 .icon-content {
+  margin: 0 10px;
+  position: relative;
+  padding: 0.5rem;
+}
+.example-2 .icon-content .tooltip {
+  position: absolute;
+  top: 100%;
+  right: 110%;
+  transform: translateY(200%);
+  color: #fff;
+  padding: 6px 10px;
+  border-radius: 5px;
+  opacity: 0;
+  visibility: hidden;
+  font-size: 14px;
+  transition: all 0.3s ease;
+}
+.example-2 .icon-content:hover .tooltip {
+  opacity: 1;
+  visibility: visible;
+  top: -50px;
+}
+.example-2 .icon-content a {
+  position: relative;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  color: #4d4d4d;
+  background-color: #fff;
+  transition: all 0.3s ease-in-out;
+}
+.example-2 .icon-content a:hover {
+  box-shadow: 3px 2px 45px 0px rgb(0 0 0 / 12%);
+}
+.example-2 .icon-content a svg {
+  position: relative;
+  z-index: 1;
+  width: 30px;
+  height: 30px;
+}
+.example-2 .icon-content a:hover {
+  color: white;
+}
+.example-2 .icon-content a .filled {
+  position: absolute;
+  top: auto;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 0;
+  background-color: #000;
+  transition: all 0.3s ease-in-out;
+}
+.example-2 .icon-content a:hover .filled {
+  height: 100%;
+}
+
+.example-2 .icon-content a[data-social="linkedin"] .filled,
+.example-2 .icon-content a[data-social="linkedin"] ~ .tooltip {
+  background-color: #0274b3;
+}
+
+.example-2 .icon-content a[data-social="github"] .filled,
+.example-2 .icon-content a[data-social="github"] ~ .tooltip {
+  background-color: #24262a;
+}
+.example-2 .icon-content a[data-social="instagram"] .filled,
+.example-2 .icon-content a[data-social="instagram"] ~ .tooltip {
+  background: linear-gradient(
+    45deg,
+    #405de6,
+    #5b51db,
+    #b33ab4,
+    #c135b4,
+    #e1306c,
+    #fd1f1f
+  );
+}
+.example-2 .icon-content a[data-social="youtube"] .filled,
+.example-2 .icon-content a[data-social="youtube"] ~ .tooltip {
+  background-color: #ff0000;
+}
+
+
+@media(max-width:991px){
+  .example-2{
+    flex-direction: row;
+    padding: 5px 40px;
+    bottom: 10px;
+    right: 50%;
+    transform: translateX(50%);
+    display: none;
+  }
+}
